# aocd-example-parser

./: .git-blame-ignore-revs  LICENSE  README.md  aocd_example_parser.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
aocd_example_parser/: __init__.py  examples.json  extraction.py  plugins.py  util.py
tests/: integration.py  requirements.txt  test_default_extraction.py  test_extra_context.py  test_plugins.py  test_version_str.py
