[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aocd-example-parser"
version = "2023.2"
description = "Implementation of example parser plugins for advent-of-code-data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

[[project.authors]]
name = "Wim Glenn"
email = "hey@wimglenn.com"

[project.license]
file = "LICENSE"

[project.urls]
Home = "https://github.com/wimglenn/aocd-example-parser"

[project.entry-points."adventofcode.examples"]
simple = "aocd_example_parser:simple"
reference = "aocd_example_parser:reference"
