[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aocd-example-parser"
version = "2025.12.11"
description = "Implementation of example parser plugins for advent-of-code-data"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

[[project.authors]]
name = "Wim Jeantine-Glenn"
email = "hey@wimglenn.com"

[project.urls]
Home = "https://github.com/wimglenn/aocd-example-parser"

[project.entry-points."adventofcode.examples"]
simple = "aocd_example_parser:simple"
reference = "aocd_example_parser:reference"

[tool.pytest.ini_options]
addopts = """
  --disable-socket
  --cov=aocd_example_parser
  --cov-report=html --cov-report=term-missing:skip-covered
  --cov-fail-under=100"""
